--- a/app/views/login/canvas/_new_login_content.html.erb
+++ b/app/views/login/canvas/_new_login_content.html.erb
@@ -102,20 +102,16 @@
         </div> <!-- end ic-Login__body -->
       </div> <!-- end ic-Login__innerContent  -->
       <footer role="contentinfo" id="footer" class="ic-Login-footer">
-
         <div id="footer-links" class="ic-Login-footer__links">
-          <% if Setting.get("show_opensource_linkback", "false") == "true" %>
-            <a href="http://instructure.com">
-              <%= t('open_source_learning_management_system', 'Open Source LMS') %>
-            </a>
-          <% end %>
-          <%= help_link %>
-          <%= render :partial => 'shared/footer_links' %>
-        </div>
-        <a href="http://www.instructure.com" class="ic-Login-footer__logo-link" aria-label="By Instructure">
-          <%= render "login/canvas/instructure_logo.svg" %>
-        </a>
-    </footer>
+          <a target="_blank" href="https://twitter.com/SoyUCN" class="external" style="display: inline;">
+            <span>Twitter</span>
+            <span class="ui-icon ui-icon-extlink ui-icon-inline" title="Enlace a sitio externo."></span>
+          </a>
+          <a target="_blank" href="https://www.facebook.com/SoyCatolicaDelNorte" class="external" style="display: inline;">
+            <span>Facebook</span><span class="ui-icon ui-icon-extlink ui-icon-inline" title="Enlace a sitio externo."></span>
+          </a>
+          </div>        
+      </footer>
     </div> <!-- end ic-Login__content -->
   </div>
 </div> <!-- end ic-Login -->
