Ajuste logo login mobile

--- a/app/stylesheets/bundles/mobile_auth.scss
+++ b/app/stylesheets/bundles/mobile_auth.scss
@@ -52,10 +52,10 @@ html, body {
 
 .mobileLogin-Header {
   z-index: 1;
-  background-image: url("/images/mobile_login/canvas_logo_login.svg");
+  background-image: url("https://contenido.elion.education/elion-canvas/logo-elion.png");
   background-position: center;
   background-repeat: no-repeat;
-  background-size: 156px 108px;
+  // background-size: 156px 108px;
   min-height: 156px;
 }
 .face {
